--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
+	<h1>Toodoo</h1>
+	<input type="text" placeholder="Add new todo">
+	<ul>
+		<li>First</li>
+		<li>Second</li>
+		<li>Third</li>
+	</ul>
 
 <script src="script.js"></script>
 </body>
