Add click X to delete todo function

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<h1>Toodoo</h1>
 		<input type="text" placeholder="Add new todo">
 		<ul>
-			<li>First</li>
-			<li>Second</li>
-			<li>Third</li>
+			<li><span>X</span> First</li>
+			<li><span>X</span> Second</li>
+			<li><span>X</span> Third</li>
 		</ul>	
 	</div>
 	
