--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Toodoo</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
@@ -12,9 +13,9 @@
 		<h1>Toodoo</h1>
 		<input type="text" placeholder="Add new todo">
 		<ul>
-			<li><span>X</span> First</li>
-			<li><span>X</span> Second</li>
-			<li><span>X</span> Third</li>
+			<li><span><i class="fas fa-trash"></i></span> First</li>
+			<li><span><i class="fas fa-trash"></i></span> Second</li>
+			<li><span><i class="fas fa-trash"></i></span> Third</li>
 		</ul>	
 	</div>
 	
