--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div id="container">
-		<h1>Toodoo</h1>
+		<h1>Toodoo <span id="inputToggle"><i class="fas fa-plus"></i></span></h1>
 		<input type="text" placeholder="Add new todo">
 		<ul>
 			<li><span><i class="fas fa-trash"></i></span> First</li>
