Minor style changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div id="container">
 		<h1>Toodoo <span id="inputToggle"><i class="fas fa-plus"></i></span></h1>
-		<input type="text" placeholder="Add new todo">
+		<input type="text" placeholder="Add New Todo">
 		<ul>
 			<li><span><i class="fas fa-trash"></i></span> First</li>
 			<li><span><i class="fas fa-trash"></i></span> Second</li>
