--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 		<ul>
 
 		</ul>	
+		<i class="fas fa-question-circle" id="helpIcon"></i>
+		<div id="help">
+			<h2>Instructions:</h2>
+			<p>To add a new to-do: click on the plus sign, type some text then press enter.</p>
+			<p>To check-off a to-do as completed: click on the to-do. You can click on it again to uncheck it.</p>
+			<p>To completely delete a to-do: hover over it and click the trash can.</p>
+		</div>
 	</div>
 	
 <script src="script.js"></script>
