--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 			<p>To completely delete a to-do: hover over it and click the trash can.</p>
 		</div>
 	</div>
+
+	<footer>
+		<p>Coded by <a href="https://linkedin.com/in/thesamehmagdy/">Sameh Magdy (<a href="https://github.com/TheSamehMagdy/Toodoo">Github</a>). Inspired by <a href="https://www.udemy.com/the-web-developer-bootcamp">Colt Steele's Web Developer Bootcamp.</a></p>
+	</footer>
 	
 <script src="script.js"></script>
 </body>
